@@ -1,12 +1,8 @@
 /*
- * File   : $Source: /alkacon/cvs/opencms/src/org/opencms/scheduler/CmsScheduleManager.java,v $
- * Date   : $Date: 2011/03/23 14:52:59 $
- * Version: $Revision: 1.39 $
- *
  * This library is part of OpenCms -
  * the Open Source Content Management System
  *
- * Copyright (c) 2002 - 2011 Alkacon Software GmbH (http://www.alkacon.com)
+ * Copyright (c) Alkacon Software GmbH & Co. KG (http://www.alkacon.com)
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -18,12 +14,12 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * Lesser General Public License for more details.
  *
- * For further information about Alkacon Software GmbH, please see the
+ * For further information about Alkacon Software GmbH & Co. KG, please see the
  * company website: http://www.alkacon.com
  *
  * For further information about OpenCms, please see the
  * project website: http://www.opencms.org
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -41,7 +37,6 @@ import org.opencms.security.CmsRoleViolationException;
 import org.opencms.util.CmsStringUtil;
 import org.opencms.util.CmsUUID;
 
-import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Date;
@@ -51,36 +46,36 @@ import java.util.Properties;
 
 import org.apache.commons.logging.Log;
 
-import org.quartz.CronTrigger;
+import org.quartz.CronScheduleBuilder;
 import org.quartz.Job;
+import org.quartz.JobBuilder;
 import org.quartz.JobDataMap;
-import org.quartz.JobDetail;
 import org.quartz.JobExecutionContext;
 import org.quartz.Scheduler;
 import org.quartz.SchedulerException;
 import org.quartz.SchedulerFactory;
+import org.quartz.Trigger;
+import org.quartz.TriggerBuilder;
+import org.quartz.TriggerKey;
+import org.quartz.impl.JobDetailImpl;
 import org.quartz.impl.StdSchedulerFactory;
 
 /**
  * Manages the OpenCms scheduled jobs.<p>
- * 
- * Please see the documentation of the class {@link org.opencms.scheduler.CmsScheduledJobInfo} 
+ *
+ * Please see the documentation of the class {@link org.opencms.scheduler.CmsScheduledJobInfo}
  * for a full description of the OpenCms scheduling capabilities.<p>
- * 
+ *
  * The OpenCms scheduler implementation internally uses the
  * <a href="http://www.opensymphony.com/quartz/">Quartz scheduler</a> from
  * the <a href="http://www.opensymphony.com/">OpenSymphony project</a>.<p>
- * 
+ *
  * This manager class implements the <code>org.quartz.Job</code> interface
- * and wraps all calls to the {@link org.opencms.scheduler.I_CmsScheduledJob} implementing 
+ * and wraps all calls to the {@link org.opencms.scheduler.I_CmsScheduledJob} implementing
  * classes.<p>
- * 
- * @author Alexander Kandzior 
- *  
- * @version $Revision: 1.39 $ 
- * 
- * @since 6.0.0 
- * 
+ *
+ * @since 6.0.0
+ *
  * @see org.opencms.scheduler.CmsScheduledJobInfo
  */
 public class CmsScheduleManager implements Job {
@@ -95,30 +90,30 @@ public class CmsScheduleManager implements Job {
     private CmsObject m_adminCms;
 
     /** The list of job entries from the configuration. */
-    private List m_configuredJobs;
+    private List<CmsScheduledJobInfo> m_configuredJobs;
 
     /** The list of scheduled jobs. */
-    private List m_jobs;
+    private List<CmsScheduledJobInfo> m_jobs;
 
     /** The initialized scheduler. */
     private Scheduler m_scheduler;
 
     /**
-     * Default constructor for the scheduler manager, 
+     * Default constructor for the scheduler manager,
      * used only when a new job is scheduled.<p>
      */
     public CmsScheduleManager() {
 
-        // important: this constructor is always called when a new job is 
+        // important: this constructor is always called when a new job is
         // generated, so it _must_ remain empty
     }
 
     /**
      * Used by the configuration to create a new Scheduler during system startup.<p>
-     * 
+     *
      * @param configuredJobs the jobs from the configuration
      */
-    public CmsScheduleManager(List configuredJobs) {
+    public CmsScheduleManager(List<CmsScheduledJobInfo> configuredJobs) {
 
         m_configuredJobs = configuredJobs;
         int size = 0;
@@ -127,88 +122,78 @@ public class CmsScheduleManager implements Job {
         }
 
         if (CmsLog.INIT.isInfoEnabled()) {
-            CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_SCHEDULER_CREATED_1, new Integer(size)));
+            CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_SCHEDULER_CREATED_1, Integer.valueOf(size)));
         }
     }
 
     /**
      * Implementation of the Quartz job interface.<p>
-     * 
+     *
      * The architecture is that this scheduler manager generates
-     * a new (empty) instance of itself for every OpenCms job scheduled with Quartz. 
-     * When the Quartz job is executed, the configured 
+     * a new (empty) instance of itself for every OpenCms job scheduled with Quartz.
+     * When the Quartz job is executed, the configured
      * implementation of {@link I_CmsScheduledJob} will be called from this method.<p>
-     * 
+     *
      * @see org.quartz.Job#execute(org.quartz.JobExecutionContext)
      */
     public void execute(JobExecutionContext context) {
 
         JobDataMap jobData = context.getJobDetail().getJobDataMap();
+
         CmsScheduledJobInfo jobInfo = (CmsScheduledJobInfo)jobData.get(SCHEDULER_JOB_INFO);
 
         if (jobInfo == null) {
-            LOG.error(Messages.get().getBundle().key(Messages.LOG_INVALID_JOB_1, context.getJobDetail().getFullName()));
+            LOG.error(
+                Messages.get().getBundle().key(
+                    Messages.LOG_INVALID_JOB_1,
+                    ((JobDetailImpl)context.getJobDetail()).getFullName()));
             // can not continue
             return;
         }
+        // update the execution times in job info
+        jobInfo.setPreviousFireTime(context.getFireTime());
+        jobInfo.setNextFireTime(context.getNextFireTime());
+        executeJob(jobInfo);
+    }
 
-        if (LOG.isDebugEnabled()) {
-            LOG.debug(Messages.get().getBundle().key(Messages.LOG_JOB_STARTING_1, jobInfo.getJobName()));
+    /**
+     * Given a job ID, this directly executes the corresponding job.<p>
+     *
+     * @param jobId the job id
+     */
+    public void executeDirectly(String jobId) {
+
+        final CmsScheduledJobInfo jobInfo = (CmsScheduledJobInfo)getJob(jobId).clone();
+        if (jobInfo == null) {
+            LOG.error(Messages.get().getBundle().key(Messages.LOG_INVALID_JOB_1, "null"));
+            return;
         }
+        Thread thread = new Thread() {
 
-        I_CmsScheduledJob job = jobInfo.getJobInstance();
+            /**
+             * @see java.lang.Thread#run()
+             */
+            @Override
+            public void run() {
 
-        if (job != null) {
-            // launch the job
-            try {
-
-                CmsObject cms = null;
-                // update the request time in the job info to the current time
-                jobInfo.updateContextRequestTime();
-                // some simple test cases might run below this runlevel
-                if (OpenCms.getRunLevel() >= OpenCms.RUNLEVEL_3_SHELL_ACCESS) {
-                    // generate a CmsObject for the job context                    
-                    // must access the scheduler manager instance from the OpenCms singleton 
-                    // to get the initialized CmsObject
-                    cms = OpenCms.initCmsObject(OpenCms.getScheduleManager().getAdminCms(), jobInfo.getContextInfo());
-                }
-
-                String result = job.launch(cms, jobInfo.getParameters());
-                if (CmsStringUtil.isNotEmpty(result) && LOG.isInfoEnabled()) {
-                    LOG.info(Messages.get().getBundle().key(
-                        Messages.LOG_JOB_EXECUTION_OK_2,
-                        jobInfo.getJobName(),
-                        result));
-                }
-            } catch (Throwable t) {
-                LOG.error(Messages.get().getBundle().key(Messages.LOG_JOB_EXECUTION_ERROR_1, jobInfo.getJobName()), t);
+                executeJob(jobInfo);
             }
-        }
-
-        if (LOG.isDebugEnabled()) {
-            LOG.debug(Messages.get().getBundle().key(Messages.LOG_JOB_EXECUTED_1, jobInfo.getJobName()));
-            Date nextExecution = jobInfo.getExecutionTimeNext();
-            if (nextExecution != null) {
-                LOG.info(Messages.get().getBundle().key(
-                    Messages.LOG_JOB_NEXT_EXECUTION_2,
-                    jobInfo.getJobName(),
-                    nextExecution));
-            }
-        }
+        };
+        thread.start();
     }
 
     /**
      * Returns the currently scheduled job description identified by the given id.
-     * 
+     *
      * @param id the job id
-     * 
+     *
      * @return a job or <code>null</code> if not found
      */
     public CmsScheduledJobInfo getJob(String id) {
 
-        Iterator it = m_jobs.iterator();
+        Iterator<CmsScheduledJobInfo> it = m_jobs.iterator();
         while (it.hasNext()) {
-            CmsScheduledJobInfo job = (CmsScheduledJobInfo)it.next();
+            CmsScheduledJobInfo job = it.next();
             if (job.getId().equals(id)) {
                 return job;
             }
@@ -224,16 +209,16 @@ public class CmsScheduleManager implements Job {
      *
      * @return the currently scheduled job descriptions in an unmodifiable list
      */
-    public List getJobs() {
+    public List<CmsScheduledJobInfo> getJobs() {
 
         return Collections.unmodifiableList(m_jobs);
     }
 
     /**
-     * Initializes the OpenCms scheduler.<p> 
-     * 
+     * Initializes the OpenCms scheduler.<p>
+     *
      * @param adminCms an OpenCms context object that must have been initialized with "Admin" permissions
-     * 
+     *
      * @throws CmsRoleViolationException if the user has insufficient role permissions
      */
     public synchronized void initialize(CmsObject adminCms) throws CmsRoleViolationException {
@@ -244,7 +229,7 @@ public class CmsScheduleManager implements Job {
         }
 
         // the list of job entries
-        m_jobs = new ArrayList();
+        m_jobs = new ArrayList<CmsScheduledJobInfo>();
 
         // save the admin cms
         m_adminCms = adminCms;
@@ -260,7 +245,7 @@ public class CmsScheduleManager implements Job {
         // this will be required in quartz versions from 1.6, but constants are not supported in earlier versions
         properties.put("org.quartz.scheduler.jmx.export", CmsStringUtil.FALSE);
         properties.put("org.quartz.scheduler.jmx.proxy", CmsStringUtil.FALSE);
-        
+
         try {
             // initialize the Quartz scheduler
             SchedulerFactory schedulerFactory = new StdSchedulerFactory(properties);
@@ -280,7 +265,7 @@ public class CmsScheduleManager implements Job {
             // add all jobs from the system configuration
             for (int i = 0; i < m_configuredJobs.size(); i++) {
                 try {
-                    CmsScheduledJobInfo job = (CmsScheduledJobInfo)m_configuredJobs.get(i);
+                    CmsScheduledJobInfo job = m_configuredJobs.get(i);
                     scheduleJob(adminCms, job);
                 } catch (CmsSchedulerException e) {
                     // ignore this job, but keep scheduling the other jobs
@@ -307,10 +292,10 @@ public class CmsScheduleManager implements Job {
 
     /**
      * Adds a new job to the scheduler.<p>
-     *  
+     *
      * @param cms an OpenCms context object that must have been initialized with "Admin" permissions
      * @param jobInfo the job info describing the job to schedule
-     * 
+     *
      * @throws CmsRoleViolationException if the user has insufficient role permissions
      * @throws CmsSchedulerException if the job could not be scheduled for any reason
      */
@@ -337,7 +322,7 @@ public class CmsScheduleManager implements Job {
             throw new CmsSchedulerException(message);
         }
 
-        Class jobClass;
+        Class<?> jobClass;
         try {
             jobClass = Class.forName(jobInfo.getClassName());
             if (!I_CmsScheduledJob.class.isAssignableFrom(jobClass)) {
@@ -378,11 +363,16 @@ public class CmsScheduleManager implements Job {
         }
 
         // generate Quartz job trigger
-        CronTrigger trigger = new CronTrigger(jobId, Scheduler.DEFAULT_GROUP);
-
+        Trigger trigger;
         try {
-            trigger.setCronExpression(jobInfo.getCronExpression());
-        } catch (ParseException e) {
+
+            CronScheduleBuilder scheduleBuilder = CronScheduleBuilder.cronSchedule(jobInfo.getCronExpression());
+            TriggerBuilder<Trigger> triggerBuilder = TriggerBuilder.newTrigger();
+            triggerBuilder.withSchedule(scheduleBuilder);
+            triggerBuilder.withIdentity(jobId, Scheduler.DEFAULT_GROUP);
+            trigger = triggerBuilder.build();
+
+        } catch (Exception e) {
             if (idCreated) {
                 jobInfo.setId(null);
             }
@@ -397,12 +387,14 @@ public class CmsScheduleManager implements Job {
 
         CmsScheduledJobInfo oldJob = null;
         if (!idCreated) {
-            // this job is already scheduled, remove the currently scheduled instance and keep the id     
-            // important: since the new job may have errors, it's required to make sure the old job is only unscheduled 
+            // this job is already scheduled, remove the currently scheduled instance and keep the id
+            // important: since the new job may have errors, it's required to make sure the old job is only unscheduled
             // if the new job info is o.k.
             oldJob = unscheduleJob(cms, jobId);
             if (oldJob == null) {
-                CmsMessageContainer message = Messages.get().container(Messages.ERR_JOB_WITH_ID_DOES_NOT_EXIST_1, jobId);
+                CmsMessageContainer message = Messages.get().container(
+                    Messages.ERR_JOB_WITH_ID_DOES_NOT_EXIST_1,
+                    jobId);
                 LOG.warn(message.key());
                 // can not continue
                 throw new CmsSchedulerException(message);
@@ -415,7 +407,9 @@ public class CmsScheduleManager implements Job {
         if (jobInfo.isActive()) {
 
             // generate Quartz job detail
-            JobDetail jobDetail = new JobDetail(jobInfo.getId(), Scheduler.DEFAULT_GROUP, CmsScheduleManager.class);
+            JobDetailImpl jobDetail = (JobDetailImpl)JobBuilder.newJob(CmsScheduleManager.class).build();
+            jobDetail.setName(jobInfo.getId());
+            jobDetail.setGroup(Scheduler.DEFAULT_GROUP);
 
             // add the trigger to the job info
             jobInfo.setTrigger(trigger);
@@ -429,19 +423,21 @@ public class CmsScheduleManager implements Job {
             try {
                 m_scheduler.scheduleJob(jobDetail, trigger);
                 if (LOG.isInfoEnabled()) {
-                    LOG.info(Messages.get().getBundle().key(
-                        Messages.LOG_JOB_SCHEDULED_4,
-                        new Object[] {
-                            new Integer(m_jobs.size()),
-                            jobInfo.getJobName(),
-                            jobInfo.getClassName(),
-                            jobInfo.getContextInfo().getUserName()}));
+                    LOG.info(
+                        Messages.get().getBundle().key(
+                            Messages.LOG_JOB_SCHEDULED_4,
+                            new Object[] {
+                                Integer.valueOf(m_jobs.size()),
+                                jobInfo.getJobName(),
+                                jobInfo.getClassName(),
+                                jobInfo.getContextInfo().getUserName()}));
                     Date nextExecution = jobInfo.getExecutionTimeNext();
                     if (nextExecution != null) {
-                        LOG.info(Messages.get().getBundle().key(
-                            Messages.LOG_JOB_NEXT_EXECUTION_2,
-                            jobInfo.getJobName(),
-                            nextExecution));
+                        LOG.info(
+                            Messages.get().getBundle().key(
+                                Messages.LOG_JOB_NEXT_EXECUTION_2,
+                                jobInfo.getJobName(),
+                                nextExecution));
                     }
                 }
             } catch (Exception e) {
@@ -456,8 +452,11 @@ public class CmsScheduleManager implements Job {
                     jobInfo.getJobName(),
                     jobInfo.getClassName());
                 if (oldJob != null) {
-                    // make sure an old job is re-scheduled 
-                    jobDetail = new JobDetail(oldJob.getId(), Scheduler.DEFAULT_GROUP, CmsScheduleManager.class);
+                    // make sure an old job is re-scheduled
+
+                    jobDetail = (JobDetailImpl)JobBuilder.newJob(CmsScheduleManager.class).build();
+                    jobDetail.setName(oldJob.getId());
+                    jobDetail.setGroup(Scheduler.DEFAULT_GROUP);
                     jobDetail.setJobDataMap(jobData);
                     try {
                         m_scheduler.scheduleJob(jobDetail, oldJob.getTrigger());
@@ -488,7 +487,7 @@ public class CmsScheduleManager implements Job {
 
     }
 
-    /** 
+    /**
      * Shuts down this instance of the OpenCms scheduler manager.<p>
      */
     public synchronized void shutDown() {
@@ -512,16 +511,17 @@ public class CmsScheduleManager implements Job {
 
     /**
      * Removes a currently scheduled job from the scheduler.<p>
-     *  
+     *
      * @param cms an OpenCms context object that must have been initialized with "Admin" permissions
      * @param jobId the id of the job to unschedule, obtained with <code>{@link CmsScheduledJobInfo#getId()}</code>
-     * 
-     * @return the <code>{@link CmsScheduledJobInfo}</code> of the sucessfully unscheduled job, 
+     *
+     * @return the <code>{@link CmsScheduledJobInfo}</code> of the sucessfully unscheduled job,
      *      or <code>null</code> if the job could not be unscheduled
-     * 
+     *
      * @throws CmsRoleViolationException if the user has insufficient role permissions
      */
-    public synchronized CmsScheduledJobInfo unscheduleJob(CmsObject cms, String jobId) throws CmsRoleViolationException {
+    public synchronized CmsScheduledJobInfo unscheduleJob(CmsObject cms, String jobId)
+    throws CmsRoleViolationException {
 
         if (OpenCms.getRunLevel() > OpenCms.RUNLEVEL_1_CORE_OBJECT) {
             // simple unit tests will have runlevel 1 and no CmsObject
@@ -532,7 +532,7 @@ public class CmsScheduleManager implements Job {
         if (m_jobs.size() > 0) {
             // try to remove the job from the OpenCms list of jobs
             for (int i = (m_jobs.size() - 1); i >= 0; i--) {
-                CmsScheduledJobInfo job = (CmsScheduledJobInfo)m_jobs.get(i);
+                CmsScheduledJobInfo job = m_jobs.get(i);
                 if (jobId.equals(job.getId())) {
                     m_jobs.remove(i);
                     if (jobInfo != null) {
@@ -547,7 +547,7 @@ public class CmsScheduleManager implements Job {
             // job currently active, remove it from the Quartz scheduler
             try {
                 // try to remove the job from Quartz
-                m_scheduler.unscheduleJob(jobId, Scheduler.DEFAULT_GROUP);
+                m_scheduler.unscheduleJob(new TriggerKey(jobId, Scheduler.DEFAULT_GROUP));
                 if (LOG.isDebugEnabled()) {
                     LOG.debug(Messages.get().getBundle().key(Messages.LOG_UNSCHEDULED_JOB_1, jobId));
                 }
@@ -562,8 +562,59 @@ public class CmsScheduleManager implements Job {
     }
 
     /**
+     * Executes the given job.<p>
+     *
+     * @param jobInfo the job info bean
+     */
+    protected void executeJob(CmsScheduledJobInfo jobInfo) {
+
+        if (LOG.isDebugEnabled()) {
+            LOG.debug(Messages.get().getBundle().key(Messages.LOG_JOB_STARTING_1, jobInfo.getJobName()));
+        }
+
+        I_CmsScheduledJob job = jobInfo.getJobInstance();
+
+        if (job != null) {
+            // launch the job
+            try {
+
+                CmsObject cms = null;
+                // update the request time in the job info to the current time
+                jobInfo.updateContextRequestTime();
+                // some simple test cases might run below this runlevel
+                if (OpenCms.getRunLevel() >= OpenCms.RUNLEVEL_3_SHELL_ACCESS) {
+                    // generate a CmsObject for the job context
+                    // must access the scheduler manager instance from the OpenCms singleton
+                    // to get the initialized CmsObject
+                    cms = OpenCms.initCmsObject(OpenCms.getScheduleManager().getAdminCms(), jobInfo.getContextInfo());
+                }
+
+                String result = job.launch(cms, jobInfo.getParameters());
+                if (CmsStringUtil.isNotEmpty(result) && LOG.isInfoEnabled()) {
+                    LOG.info(
+                        Messages.get().getBundle().key(Messages.LOG_JOB_EXECUTION_OK_2, jobInfo.getJobName(), result));
+                }
+            } catch (Throwable t) {
+                LOG.error(Messages.get().getBundle().key(Messages.LOG_JOB_EXECUTION_ERROR_1, jobInfo.getJobName()), t);
+            }
+        }
+
+        if (LOG.isDebugEnabled()) {
+            LOG.debug(Messages.get().getBundle().key(Messages.LOG_JOB_EXECUTED_1, jobInfo.getJobName()));
+            Date nextExecution = jobInfo.getExecutionTimeNext();
+            if (nextExecution != null) {
+                LOG.info(
+                    Messages.get().getBundle().key(
+                        Messages.LOG_JOB_NEXT_EXECUTION_2,
+                        jobInfo.getJobName(),
+                        nextExecution));
+            }
+        }
+    }
+
+    /**
      * Returns the {@link CmsObject} this Scheduler Manager was initialized with.<p>
-     * 
+     *
      * @return the {@link CmsObject} this Scheduler Manager was initialized with
      */
     private synchronized CmsObject getAdminCms() {
